# backend/app/serializers/partner_listing_serializer.rb
@@ -10,6 +10,7 @@ module PartnerListingSerializer
       status: listing.status,
       category: { id: category.id, slug: category.slug, name: category.name, booking_type: category.booking_type },
       area: { slug: listing.area.slug, name: listing.area.name },
+      address: listing.slice(:street, :city, :region, :province, :postal_code, :country).symbolize_keys,
       location: { lat: listing.location.y, lng: listing.location.x },
       attrs: listing.attrs,
       created_at: listing.created_at,
